--- a/home_page.html
+++ b/home_page.html
@@ -69,7 +69,7 @@
     <main role="main" class="container">
 
       <div class="starter-template">
-        <img class="mb-4" src="res\images\entete_site.png" ><br>
+          <a href="http://www.aumk.ma/"><img class="mb-4" src="res\images\entete_site.png" ></a><br>
         <h1 style="color:#0a8ab4;" class="mb-3 font-weight-bold text-uppercase">Gestion de stock</h1>
         <p class="lead">Use this document as a way to quickly start any new project.<br> All you get is this text and a mostly barebones HTML document.</p>
       </div>
