--- a/home_page.html
+++ b/home_page.html
@@ -29,41 +29,38 @@
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" id="dropdown01" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catégorie 1</a>
             <div class="dropdown-menu" aria-labelledby="dropdown01">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Ajouter une Catégorie</a>
+              <a class="dropdown-item" href="#">Rechercher une Catégorie</a>
+              <a class="dropdown-item" href="#">Afficher la liste des Catégories</a>
             </div>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" id="dropdown02" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catégorie 2</a>
             <div class="dropdown-menu" aria-labelledby="dropdown02">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Ajouter une Catégorie</a>
+              <a class="dropdown-item" href="#">Rechercher une Catégorie</a>
+              <a class="dropdown-item" href="#">Afficher la liste des Catégories</a>
             </div>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" id="dropdown03" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Article</a>
             <div class="dropdown-menu" aria-labelledby="dropdown03">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Ajouter un article</a>
+              <a class="dropdown-item" href="#">Rechercher un article</a>
             </div>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">achat fournisseur</a>
             <div class="dropdown-menu" aria-labelledby="dropdown04">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">effectue un achat</a>
+              <a class="dropdown-item" href="#">consultation des achats</a>
             </div>
           </li>
           <li class="nav-item dropdown active">
             <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Réception</a>
             <div class="dropdown-menu" aria-labelledby="dropdown04">
-              <a class="dropdown-item" href="#">Action</a>
-              <a class="dropdown-item" href="#">Another action</a>
-              <a class="dropdown-item" href="#">Something else here</a>
+              <a class="dropdown-item" href="#">Prendre un produit</a>
+              <a class="dropdown-item" href="#">consultation des collectibles</a>
             </div>
           </li>
         </ul>
