--- a/navbar.html
+++ b/navbar.html
@@ -17,7 +17,7 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" id="dropdown02" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catégorie 2</a>
           <div class="dropdown-menu" aria-labelledby="dropdown02">
-            <a class="dropdown-item" href="#">Ajouter une Catégorie</a>
+            <a class="dropdown-item" href="ajoutement2.php">Ajouter une Catégorie</a>
             <a class="dropdown-item" href="#">Rechercher une Catégorie</a>
             <a class="dropdown-item" href="#">Afficher la liste des Catégories</a>
           </div>
