add ajoutement2.php file and update links in the navbar.html

--- a/navbar.html
+++ b/navbar.html
@@ -9,7 +9,7 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" id="dropdown01" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catégorie 1</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
-            <a class="dropdown-item" href="ajoutement.php">Ajouter une Catégorie</a>
+            <a class="dropdown-item" href="ajoutement_categorie1.php">Ajouter une Catégorie</a>
             <a class="dropdown-item" href="#">Rechercher une Catégorie</a>
             <a class="dropdown-item" href="#">Afficher la liste des Catégories</a>
           </div>
@@ -17,7 +17,7 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" id="dropdown02" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catégorie 2</a>
           <div class="dropdown-menu" aria-labelledby="dropdown02">
-            <a class="dropdown-item" href="ajoutement2.php">Ajouter une Catégorie</a>
+            <a class="dropdown-item" href="ajoutement_categorie2.php">Ajouter une Catégorie</a>
             <a class="dropdown-item" href="#">Rechercher une Catégorie</a>
             <a class="dropdown-item" href="#">Afficher la liste des Catégories</a>
           </div>
@@ -25,7 +25,7 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" id="dropdown03" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Article</a>
           <div class="dropdown-menu" aria-labelledby="dropdown03">
-            <a class="dropdown-item" href="#">Ajouter un article</a>
+            <a class="dropdown-item" href="ajoutement_articles.php">Ajouter un article</a>
             <a class="dropdown-item" href="#">Rechercher un article</a>
           </div>
         </li>
