--- a/navbar.html
+++ b/navbar.html
@@ -32,7 +32,7 @@
         <li class="nav-item dropdown active">
           <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">achat fournisseur</a>
           <div class="dropdown-menu" aria-labelledby="dropdown04">
-            <a class="dropdown-item" href="#">effectue un achat</a>
+            <a class="dropdown-item" href="effectue_achat.php">effectue un achat</a>
             <a class="dropdown-item" href="#">consultation des achats</a>
           </div>
         </li>
