add the Rechercher_categorie1 and put its link in navbar

--- a/navbar.html
+++ b/navbar.html
@@ -10,8 +10,7 @@
           <a class="nav-link dropdown-toggle" id="dropdown01" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catégorie 1</a>
           <div class="dropdown-menu" aria-labelledby="dropdown01">
             <a class="dropdown-item" href="ajoutement_categorie1.php">Ajouter une Catégorie</a>
-            <a class="dropdown-item" href="#">Rechercher une Catégorie</a>
-            <a class="dropdown-item" href="#">Afficher la liste des Catégories</a>
+            <a class="dropdown-item" href="Rechercher_categorie1.php">Rechercher une Catégorie</a>
           </div>
         </li>
         <li class="nav-item dropdown active">
@@ -19,7 +18,6 @@
           <div class="dropdown-menu" aria-labelledby="dropdown02">
             <a class="dropdown-item" href="ajoutement_categorie2.php">Ajouter une Catégorie</a>
             <a class="dropdown-item" href="#">Rechercher une Catégorie</a>
-            <a class="dropdown-item" href="#">Afficher la liste des Catégories</a>
           </div>
         </li>
         <li class="nav-item dropdown active">
