--- a/navbar.html
+++ b/navbar.html
@@ -1,3 +1,4 @@
+<link href="css/navbar.css" rel="stylesheet">
 <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
     <a class="navbar-brand" href="Home_page.php">Accueil</a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
