add an icon instead of the text

--- a/navbar.html
+++ b/navbar.html
@@ -1,6 +1,6 @@
 <link href="css/navbar.css" rel="stylesheet">
 <nav class="navbar navbar-expand-md navbar-dark bg-primary fixed-top">
-    <a class="navbar-brand" href="Home_page.php">Accueil</a>
+    <a class="navbar-brand" href="Home_page.php"><img height="30x" src="res/images/home.svg"></a>
     <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarColor02" aria-controls="navbarColor02" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
