--- a/navbar.html
+++ b/navbar.html
@@ -18,7 +18,7 @@
           <a class="nav-link dropdown-toggle" id="dropdown02" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Catégorie 2</a>
           <div class="dropdown-menu" aria-labelledby="dropdown02">
             <a class="dropdown-item" href="ajoutement_categorie2.php">Ajouter une Catégorie</a>
-            <a class="dropdown-item" href="#">Rechercher une Catégorie</a>
+            <a class="dropdown-item" href="Rechercher_categorie2.php">Rechercher une Catégorie</a>
           </div>
         </li>
         <li class="nav-item dropdown active">
