--- a/navbar.html
+++ b/navbar.html
@@ -25,7 +25,7 @@
           <a class="nav-link dropdown-toggle" id="dropdown03" href="#" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Article</a>
           <div class="dropdown-menu" aria-labelledby="dropdown03">
             <a class="dropdown-item" href="ajoutement_articles.php">Ajouter un article</a>
-            <a class="dropdown-item" href="#">Rechercher un article</a>
+            <a class="dropdown-item" href="Rechercher_articles.php">Rechercher un article</a>
           </div>
         </li>
         <li class="nav-item dropdown active">
