put consultation_collectibles.php's link

--- a/navbar.html
+++ b/navbar.html
@@ -39,7 +39,7 @@
           <a class="nav-link dropdown-toggle" href="#" id="dropdown04" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">Réception</a>
           <div class="dropdown-menu" aria-labelledby="dropdown04">
             <a class="dropdown-item" href="prendre_produit.php">Prendre un produit</a>
-            <a class="dropdown-item" href="#">consultation des collectibles</a>
+            <a class="dropdown-item" href="consultation_collectibles.php">consultation des collectibles</a>
           </div>
         </li>
       </ul>
