--- a/navbar.html
+++ b/navbar.html
@@ -43,8 +43,8 @@
           </div>
         </li>
       </ul>
-      <form class="form-inline my-2 my-lg-0">
-        <input class="form-control mr-sm-2" type="text" placeholder="Search" aria-label="Search">
+      <form class="form-inline my-2 my-lg-0" method="GET" action="search.php">
+        <input required class="form-control mr-sm-2" name="search" type="text" placeholder="Search" aria-label="Search">
         <button class="btn btn-outline-light my-2 my-sm-0" type="submit">Search</button>
       </form>
     </div>
