--- a/footer.html
+++ b/footer.html
@@ -1,3 +1,3 @@
 <footer>
-    <p class="mt-5 mb-3 text-muted card-footer">Hamza Ghaissi-AUMK-Juillet 2018</p>
+    <p class="mt-5 mb-3 text-muted card-footer">&copy; Hamza Ghaissi-AUMK-Juillet 2018</p>
 </footer>
